# pydpmd

./: .gitignore  README.md  pyproject.toml
examples/: demo_ragged.py  test.py  two_particle_diffusion_in_box.py
src/pydpmd/: __init__.py  calc_utils.py  fields.py  h5io.py  trajectory.py  utils.py
src/pydpmd/calc/: __init__.py  bins.py  engine.py  kernels.py  reader.py
src/pydpmd/data/: __init__.py  base_particle.py  base_point_particle.py  base_poly_particle.py  bumpy_utils.py  disk.py  rigid_bumpy.py
src/pydpmd/plot/: __init__.py  mpl.py
